# Tweakers

./: .gitignore  Cargo.toml  README.md  build-appimage.sh  build-deb.sh  build.rs  com.lilithlinux.tweakers.metainfo.xml  tweakers.desktop
.github/workflows/: ci.yml
assets/polkit/: com.lilithlinux.tweakers.policy
debian/: control  postinst  prerm
src/: cosmic_apps.rs  cosmic_themes.rs  czkawka.rs  main.rs  resource_monitor.rs  sudo_handler.rs
src/backup/: mod.rs
src/benchmark/: mod.rs
src/cleaners/: mod.rs
src/tweaks/: cpu.rs  gpu.rs  kernel.rs  memory.rs  mod.rs  network.rs  power.rs  storage.rs
ui/: icons.slint  main.slint  theme.slint
