[package]
name = "tweakers"
version = "1.0.0"
edition = "2021"
description = "System optimization and utility tool for Lilith Linux"
authors = ["Lilith Linux Team"]
license = "MIT"
repository = "https://github.com/Lilith-Linux/Tweakers"
readme = "README.md"
categories = ["system-administration", "system-utilities"]
keywords = ["linux", "tweaks", "optimization", "system", "utility"]

[[bin]]
name = "tweakers"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.5"

[dependencies]
slint = { version = "1.5", features = ["backend-winit"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
which = "5"
sysinfo = "0.29"
walkdir = "2"
sha2 = "0.10"
regex = "1"
num_cpus = "1.16"
futures = "0.3"
log = "0.4"
env_logger = "0.10"