[package]
name = "tweakers"
version = "1.0.2"
edition = "2021"
description = "System optimization and utility tool for Lilith Linux"
authors = ["Lilith Linux Team"]
license = "MIT"
repository = "https://github.com/Lilith-Linux/Tweakers"
readme = "README.md"
categories = ["system-administration", "system-utilities"]
keywords = ["linux", "tweaks", "optimization", "system", "utility"]

[[bin]]
name = "tweakers"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.5"

[dependencies]
slint = { version = "1.5", features = ["backend-winit"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
which = "5"
sysinfo = "0.29"
walkdir = "2"
sha2 = "0.10"
regex = "1"
num_cpus = "1.16"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.19"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }

zip = "0.6"
flate2 = "1"
tar = "0.4"

[package.metadata.deb]
maintainer  = "Lilith Linux Team <team@lilith-linux.org>"
copyright   = "2026, Lilith Linux Team"
depends     = "rclone, sysbench, fio, fdupes, zenity, polkitd, $auto"
section     = "admin"
priority    = "optional"
assets = [
  ["target/release/tweakers",                       "usr/bin/tweakers",                                                     "755"],
  ["tweakers.desktop",                               "usr/share/applications/tweakers.desktop",                              "644"],
  ["assets/icons/tweakers-256.png",                 "usr/share/icons/hicolor/256x256/apps/tweakers.png",                    "644"],
  ["assets/icons/tweakers-128.png",                 "usr/share/icons/hicolor/128x128/apps/tweakers.png",                    "644"],
  ["assets/icons/tweakers-64.png",                  "usr/share/icons/hicolor/64x64/apps/tweakers.png",                      "644"],
  ["assets/icons/tweakers-48.png",                  "usr/share/icons/hicolor/48x48/apps/tweakers.png",                      "644"],
  ["assets/icons/tweakers-32.png",                  "usr/share/icons/hicolor/32x32/apps/tweakers.png",                      "644"],
  ["assets/icons/tweakers-16.png",                  "usr/share/icons/hicolor/16x16/apps/tweakers.png",                      "644"],
  ["assets/polkit/com.lilithlinux.tweakers.policy", "usr/share/polkit-1/actions/com.lilithlinux.tweakers.policy",           "644"],
  ["com.lilithlinux.tweakers.metainfo.xml",          "usr/share/metainfo/com.lilithlinux.tweakers.metainfo.xml",             "644"]
]